src/objects/Service_Resource__c.object
<CustomObject>
    <description>TRACT Service Resource is required for Products.</description>
    <label>Service Resource</label>
    <nameField>
        <label>Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Gotransverse Category Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Gotransverse IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The TRACT Status of the Service Resource.</description>
        <inlineHelpText>The TRACT Status of the Service Resource.</inlineHelpText>
        <label>Gotransverse Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>